swagger refactor, mejoras en apis
